--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-import": "2.22.1",
     "husky": "4.3.7",
     "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
     "tsd": "0.14.0",
     "typescript": "4.1.3"
   },
