--- a/package.json
+++ b/package.json
@@ -1,26 +1,44 @@
 {
   "name": "@typeofweb/schema",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "dist/index.common.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/types/index.d.ts",
   "repository": "https://github.com/typeofweb/schema",
+  "bugs": {
+    "url": "https://github.com/typeofweb/schema/issues"
+  },
+  "homepage": "https://github.com/typeofweb/schema#readme",
   "author": "Michał Miszczyszyn - Type of Web <hi@typeofweb.com> (https://typeofweb.com/)",
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@rollup/plugin-commonjs": "17.0.0",
+    "@rollup/plugin-node-resolve": "11.0.1",
+    "@rollup/plugin-typescript": "8.1.0",
+    "@swc-node/jest": "1.0.3",
+    "@types/jest": "26.0.20",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
+    "babel-jest": "26.6.3",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-functional": "3.2.1",
     "eslint-plugin-import": "2.22.1",
     "husky": "4.3.7",
+    "jest": "26.6.3",
     "lint-staged": "10.5.3",
     "prettier": "2.2.1",
+    "rollup": "2.36.1",
     "tsd": "0.14.0",
+    "tslib": "2.1.0",
     "typescript": "4.1.3"
   },
   "scripts": {
-    "test": "tsd"
+    "test": "yarn tsd && yarn jest",
+    "tsd": "tsd",
+    "jest": "jest --detectOpenHandles --forceExit --passWithNoTests",
+    "jest:ci": "jest --passWithNoTests"
   },
   "husky": {
     "hooks": {
