--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
   "unpkg": "dist/index.umd.js",
-  "types": "dist/types/index.d.ts",
-  "repository": "https://github.com/typeofweb/schema",
+  "types": "dist/index.d.ts",
+  "repository": "git://github.com/typeofweb/schema",
   "bugs": {
     "url": "https://github.com/typeofweb/schema/issues"
   },
@@ -38,14 +38,13 @@
     "prettier": "2.2.1",
     "ramda": "0.27.1",
     "rollup": "2.36.1",
-    "tsd": "0.14.0",
+    "tsd": "https://github.com/typeofweb/tsd#pkg",
     "tslib": "2.1.0",
     "typescript": "4.1.3",
     "weak-napi": "2.0.2"
   },
   "scripts": {
-    "test": "yarn tsd && yarn jest",
-    "tsd": "tsd",
+    "test": "yarn jest",
     "jest": "jest --detectOpenHandles --forceExit --passWithNoTests",
     "jest:ci": "jest --passWithNoTests",
     "build": "rollup --config"
@@ -61,8 +60,5 @@
       "eslint --fix",
       "yarn prettier --write"
     ]
-  },
-  "tsd": {
-    "directory": "./src/"
   }
 }
