--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node": "14.x.x"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "files": [
     "package.json",
