--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "prettier": "2.2.1",
     "ramda": "0.27.1",
     "rollup": "2.36.1",
+    "rollup-plugin-prettier": "2.1.0",
+    "rollup-plugin-terser": "7.0.2",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
     "tslib": "2.1.0",
     "typescript": "4.1.3",
@@ -55,7 +57,7 @@
     "jest": "jest --detectOpenHandles --forceExit --passWithNoTests",
     "jest:ci": "jest --passWithNoTests",
     "build": "rollup --config",
-    "prepublish": "yarn build"
+    "prepublishOnly": "yarn build"
   },
   "husky": {
     "hooks": {
