--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -38,7 +38,9 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run tests
-        run: yarn test
+        run: |
+          yarn build
+          yarn test
 
       - name: Collect coverage
         run: curl -s https://codecov.io/bash | bash
