--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/ramda": "0.27.34",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
+    "all-contributors-cli": "6.19.0",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-functional": "3.2.1",
