feat(modifier): `nonEmpty` and `minLength` modifiers now return tuples for better typesafety
BREAKING CHANGE: Tuple type might be incompatible with arrays used previously.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "resolveJsonModule": true,
     "allowUnreachableCode": true
   },
-  "include": ["src"]
+  "include": ["src", "__tests__"]
 }
