--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
     "all-contributors-cli": "6.19.0",
-    "clinic": "8.0.1",
     "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-functional": "3.2.1",
@@ -56,12 +55,16 @@
     "prettier": "2.2.1",
     "ramda": "0.27.1",
     "rollup": "2.36.1",
+    "rollup-plugin-filesize": "9.1.0",
     "rollup-plugin-prettier": "2.1.0",
     "rollup-plugin-terser": "7.0.2",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
     "tslib": "2.1.0",
     "typescript": "4.1.3",
     "weak-napi": "2.0.2"
+  },
+  "optionalDependencies": {
+    "clinic": "8.0.1"
   },
   "scripts": {
     "test": "yarn jest",
@@ -78,6 +81,9 @@
     "**/*.ts": [
       "yarn jest",
       "yarn eslint --fix",
+      "yarn prettier --write"
+    ],
+    "**/*.md": [
       "yarn prettier --write"
     ]
   }
