--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
       "yarn eslint --fix",
       "yarn prettier --write"
     ],
-    "**/*.md": [
+    "**/*.{md,js,json}": [
       "yarn prettier --write"
     ]
   }
