--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "files": [
     "package.json",
-    "dist"
+    "dist",
+    "LICENSE"
   ],
   "keywords": [
     "typescript",
@@ -56,6 +57,7 @@
     "ramda": "0.27.1",
     "rollup": "2.36.1",
     "rollup-plugin-filesize": "9.1.0",
+    "rollup-plugin-license": "2.2.0",
     "rollup-plugin-prettier": "2.1.0",
     "rollup-plugin-terser": "7.0.2",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
