--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "rollup-plugin-license": "2.2.0",
     "rollup-plugin-prettier": "2.1.0",
     "rollup-plugin-terser": "7.0.2",
+    "ts-jest": "26.4.4",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
     "tslib": "2.1.0",
     "typescript": "4.1.3",
