--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -37,4 +37,4 @@ jobs:
             ${{ runner.os }}-
 
       - name: Measure
-        uses: typeofweb/typeofweb-bundlephobia-pr-stats-action#pkg
+        uses: typeofweb/typeofweb-bundlephobia-pr-stats-action@pkg
