--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Measure
         uses: typeofweb/typeofweb-bundlephobia-pr-stats-action@pkg
         with:
-          path: ${{ env.GITHUB_WORKSPACE }}
+          path: ${{ github.workspace }}
