--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "browser": "dist/index.umd.js",
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "repository": "git://github.com/typeofweb/schema",
   "bugs": {
     "url": "https://github.com/typeofweb/schema/issues"
