:busts_in_silhouette: Update @wisnie as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -29,7 +29,9 @@
       "profile": "https://github.com/wisnie",
       "contributions": [
         "code",
-        "review"
+        "review",
+        "bug",
+        "doc"
       ]
     },
     {
