--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -42,6 +42,15 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "asottile",
+      "name": "Anthony Sottile",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1810591?v=4",
+      "profile": "https://github.com/asottile",
+      "contributions": [
+        "security"
+      ]
     }
   ],
   "contributorsPerLine": 3,
