--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -14,6 +14,10 @@ jobs:
       github.event.workflow_run.conclusion == 'success' }}
 
     steps:
+      - env:
+          BLA: ${{toJson(github.event)}}
+        run: echo $BLA
+
       - name: Compare sizes
         uses: typeofweb/typeofweb-bundlephobia-pr-stats-action@pkg
         with:
