--- a/.github/workflows/stats-workflow.yml
+++ b/.github/workflows/stats-workflow.yml
@@ -13,11 +13,41 @@ jobs:
       ${{ github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success' }}
 
+    # START https://securitylab.github.com/research/github-actions-preventing-pwn-requests
     steps:
+      - name: 'Download artifact'
+        uses: actions/github-script@v3.1.0
+        with:
+          script: |
+            var artifacts = await github.actions.listWorkflowRunArtifacts({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               run_id: ${{github.event.workflow_run.id }},
+            });
+            var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
+              return artifact.name == "pr"
+            })[0];
+            var download = await github.actions.downloadArtifact({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               artifact_id: matchArtifact.id,
+               archive_format: 'zip',
+            });
+            var fs = require('fs');
+            fs.writeFileSync('${{github.workspace}}/pr.zip', Buffer.from(download.data));
+      - run: unzip pr.zip
+      - uses: actions/github-script@v3
+        id: get-pr-number
+        with:
+          result-encoding: string
+          script: |
+            var fs = require('fs');
+            return Number(fs.readFileSync('./NR'));
+      # END https://securitylab.github.com/research/github-actions-preventing-pwn-requests
       - name: Compare sizes
         uses: typeofweb/typeofweb-bundlephobia-pr-stats-action@pkg
         with:
-          pr_number: ${{github.event.workflow_run.pull_requests[0].number}}
+          pr_number: ${{steps.get-pr-number.outputs.result}}
           workflow_run_id: ${{github.event.workflow_run.id}}
         env:
           GITHUB_TOKEN: ${{secrets.TYPEOFWEB_BOT_GITHUB_TOKEN}}
