--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lint-staged": "10.5.3",
     "prettier": "2.2.1",
     "ramda": "0.27.1",
+    "rimraf": "3.0.2",
     "rollup": "2.36.1",
     "rollup-plugin-filesize": "9.1.0",
     "rollup-plugin-license": "2.2.0",
@@ -71,7 +72,7 @@
     "pretest": "yarn build",
     "test": "yarn jest",
     "jest": "jest --detectOpenHandles --forceExit --passWithNoTests --coverage",
-    "build": "rollup --config",
+    "build": "rimraf dist && rollup --config",
     "prepublishOnly": "yarn build"
   },
   "husky": {
