refactor: Complete rewrite of the library (#42)
* Refactor part 1

* Refactor stringifies

* Cleanup

* Fix tests and cleanup

* refactor: Complete rewrite of the library

* chore: Add tests for prototype pollution

* CR

* Update readme

* Finished

* Update packages

* Add a few tests

* feat: Create allowUnknownKeys modifier & fix bug in object() (#43)

* Create allowUnknownKeys modifier & fix bug in object()

* Code review

* Initial version of allowUnknownKeys modifier

* Fix xD

* Typo

Co-authored-by: Michal Miszczyszyn <michal@mmiszy.pl>

* Speedup

* Missing link in docs

* Get rid of sequenceA

* Fixes

Co-authored-by: Bartłomiej Wiśniewski <b.wisniewski128@gmail.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,5 +38,13 @@
     "functional/prefer-readonly-type": "error",
     "functional/no-this-expression": "error",
     "functional/no-loop-statement": "error"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["src/validators/**.ts", "src/modifiers/**.ts", "src/errors.ts"],
+      "rules": {
+        "functional/no-this-expression": 0
+      }
+    }
+  ]
 }
