--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.70",
+    "@docusaurus/plugin-google-analytics": "2.0.0-alpha.70",
+    "@docusaurus/plugin-google-gtag": "2.0.0-alpha.70",
+    "@docusaurus/plugin-sitemap": "2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
