--- a/docs/package.json
+++ b/docs/package.json
@@ -12,14 +12,14 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.70",
-    "@docusaurus/plugin-google-gtag": "2.0.0-alpha.70",
-    "@docusaurus/plugin-sitemap": "2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
-    "@mdx-js/react": "^1.6.21",
-    "clsx": "^1.1.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@docusaurus/core": "latest",
+    "@docusaurus/plugin-google-gtag": "latest",
+    "@docusaurus/plugin-sitemap": "latest",
+    "@docusaurus/preset-classic": "latest",
+    "@mdx-js/react": "1.6.22",
+    "clsx": "1.1.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "browserslist": {
     "production": [
@@ -34,11 +34,11 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-alpha.70",
-    "@tsconfig/docusaurus": "^1.0.2",
-    "@types/react": "^17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.7",
-    "typescript": "^4.1.3"
+    "@docusaurus/module-type-aliases": "latest",
+    "@tsconfig/docusaurus": "1.0.2",
+    "@types/react": "17.0.1",
+    "@types/react-helmet": "6.1.0",
+    "@types/react-router-dom": "5.1.7",
+    "typescript": "4.1.3"
   }
 }
