--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "allowUnreachableCode": true,
-    "stripInternal": true
+    "stripInternal": true,
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true
   },
   "include": ["src", "__tests__"]
 }
