--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typeofweb/schema",
-  "version": "0.6.1",
+  "version": "0.6.1-2",
   "main": "dist/index.common.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
@@ -35,36 +35,36 @@
     "validations"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "17.0.0",
-    "@rollup/plugin-node-resolve": "11.1.0",
-    "@rollup/plugin-typescript": "8.1.0",
+    "@rollup/plugin-commonjs": "17.1.0",
+    "@rollup/plugin-node-resolve": "11.2.0",
+    "@rollup/plugin-typescript": "8.2.0",
     "@tsconfig/node12": "1.0.7",
     "@tsconfig/node14": "1.0.0",
-    "@types/jest": "26.0.20",
-    "@types/ramda": "0.27.36",
-    "@typescript-eslint/eslint-plugin": "4.14.1",
-    "@typescript-eslint/parser": "4.14.1",
-    "all-contributors-cli": "6.19.0",
-    "eslint": "7.18.0",
-    "eslint-config-prettier": "7.2.0",
+    "@types/jest": "26.0.21",
+    "@types/ramda": "0.27.39",
+    "@typescript-eslint/eslint-plugin": "4.18.0",
+    "@typescript-eslint/parser": "4.18.0",
+    "all-contributors-cli": "6.20.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-functional": "3.2.1",
     "eslint-plugin-import": "2.22.1",
-    "fast-check": "2.12.0",
+    "fast-check": "2.14.0",
     "husky": "4.3.8",
     "jest": "26.6.3",
-    "lint-staged": "10.5.3",
+    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
     "ramda": "0.27.1",
     "rimraf": "3.0.2",
-    "rollup": "2.38.0",
-    "rollup-plugin-filesize": "9.1.0",
-    "rollup-plugin-license": "2.2.0",
+    "rollup": "2.42.2",
+    "rollup-plugin-filesize": "9.1.1",
+    "rollup-plugin-license": "2.3.0",
     "rollup-plugin-prettier": "2.1.0",
     "rollup-plugin-terser": "7.0.2",
-    "ts-jest": "26.4.4",
+    "ts-jest": "26.5.4",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
     "tslib": "2.1.0",
-    "typescript": "4.1.3",
+    "typescript": "4.2.3",
     "weak-napi": "2.0.2"
   },
   "scripts": {
