--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typeofweb/schema",
-  "version": "0.6.1-2",
+  "version": "0.7.0",
   "main": "dist/index.common.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
