--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tsconfig/node12": "1.0.7",
     "@tsconfig/node14": "1.0.0",
     "@types/jest": "26.0.21",
+    "@types/qs": "6.9.6",
     "@types/ramda": "0.27.39",
     "@typescript-eslint/eslint-plugin": "4.18.0",
     "@typescript-eslint/parser": "4.18.0",
@@ -54,6 +55,7 @@
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
+    "qs": "6.10.1",
     "ramda": "0.27.1",
     "rimraf": "3.0.2",
     "rollup": "2.42.2",
