--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "rollup-plugin-license": "2.3.0",
     "rollup-plugin-prettier": "2.1.0",
     "rollup-plugin-terser": "7.0.2",
+    "terser": "^5.6.1",
     "ts-jest": "26.5.4",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
     "tslib": "2.1.0",
@@ -74,7 +75,8 @@
     "test": "yarn jest",
     "jest": "jest --detectOpenHandles --forceExit --passWithNoTests --coverage",
     "build": "rimraf dist && rollup --config",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "example": "yarn tsc src/example.ts && terser --compress --mangle --toplevel -- src/example.js"
   },
   "husky": {
     "hooks": {
