feat(errors): ValidationError contains all error details #13 (#64)
* feat(errors): ValidationError contains all error details array #13

* feat(errors): error details v2 (#13)

* feat(errors): fixing tests and final cleanup (#13)

* Add some tests

* fix: no ts-expect-error in array validator

* Update

* feat: make tuple accept only schema

BREAKING CHANGE: tuple does not accept literals anymore. Use oneOf instead

* fix some tests

* No error details for nullable and optional

* Simplify ErrorData types

* Final touch

Co-authored-by: Michal Miszczyszyn <michal@mmiszy.pl>

--- a/package.json
+++ b/package.json
@@ -70,10 +70,12 @@
     "weak-napi": "2.0.2"
   },
   "scripts": {
-    "pretest": "yarn build",
-    "test": "yarn jest",
-    "jest": "jest --detectOpenHandles --forceExit --passWithNoTests --coverage",
+    "prejest": "yarn build",
+    "jest": "jest",
+    "test": "yarn jest --detectOpenHandles --forceExit --passWithNoTests --coverage",
+    "test:dev": "yarn jest --watch",
     "build": "rimraf dist && rollup --config",
+    "build:watch": "rollup --config --watch",
     "prepublishOnly": "yarn build"
   },
   "husky": {
@@ -83,7 +85,7 @@
   },
   "lint-staged": {
     "**/*.ts": [
-      "yarn jest",
+      "yarn jest --passWithNoTests",
       "yarn eslint --fix",
       "yarn prettier --write"
     ],
