--- a/package.json
+++ b/package.json
@@ -35,38 +35,38 @@
     "validations"
   ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.2.0",
-    "@rollup/plugin-typescript": "8.2.0",
+    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-node-resolve": "13.0.0",
+    "@rollup/plugin-typescript": "8.2.1",
     "@tsconfig/node12": "1.0.7",
     "@tsconfig/node14": "1.0.0",
-    "@types/jest": "26.0.21",
+    "@types/jest": "26.0.23",
     "@types/qs": "6.9.6",
-    "@types/ramda": "0.27.39",
-    "@typescript-eslint/eslint-plugin": "4.18.0",
-    "@typescript-eslint/parser": "4.18.0",
+    "@types/ramda": "0.27.40",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
     "all-contributors-cli": "6.20.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint": "7.28.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-functional": "3.2.1",
-    "eslint-plugin-import": "2.22.1",
-    "fast-check": "2.14.0",
-    "husky": "4.3.8",
-    "jest": "26.6.3",
-    "lint-staged": "10.5.4",
-    "prettier": "2.2.1",
+    "eslint-plugin-import": "2.23.4",
+    "fast-check": "2.16.0",
+    "husky": "6.0.0",
+    "jest": "27.0.4",
+    "lint-staged": "11.0.0",
+    "prettier": "2.3.1",
     "qs": "6.10.1",
     "ramda": "0.27.1",
     "rimraf": "3.0.2",
-    "rollup": "2.42.2",
+    "rollup": "2.51.1",
     "rollup-plugin-filesize": "9.1.1",
-    "rollup-plugin-license": "2.3.0",
+    "rollup-plugin-license": "2.5.0",
     "rollup-plugin-prettier": "2.1.0",
     "rollup-plugin-terser": "7.0.2",
-    "ts-jest": "26.5.4",
+    "ts-jest": "27.0.3",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
-    "tslib": "2.1.0",
-    "typescript": "4.2.3",
+    "tslib": "2.2.0",
+    "typescript": "4.3.2",
     "weak-napi": "2.0.2"
   },
   "scripts": {
@@ -76,16 +76,12 @@
     "test:dev": "yarn jest --watch",
     "build": "rimraf dist && rollup --config",
     "build:watch": "rollup --config --watch",
-    "prepublishOnly": "yarn build"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "prepublishOnly": "yarn build",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "**/*.ts": [
-      "yarn jest --passWithNoTests",
+      "yarn jest",
       "yarn eslint --fix",
       "yarn prettier --write"
     ],
