--- a/package.json
+++ b/package.json
@@ -46,18 +46,13 @@
     "@rollup/plugin-typescript": "8.2.1",
     "@tsconfig/node12": "1.0.7",
     "@tsconfig/node14": "1.0.0",
+    "@typeofweb/eslint-plugin": "0.1.10",
     "@types/jest": "26.0.23",
     "@types/node": "12",
     "@types/qs": "6.9.6",
     "@types/ramda": "0.27.40",
-    "@typescript-eslint/eslint-plugin": "4.26.1",
-    "@typescript-eslint/parser": "4.26.1",
     "all-contributors-cli": "6.20.0",
     "eslint": "7.28.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-functional": "3.2.1",
-    "eslint-plugin-import": "2.23.4",
-    "eslint-plugin-unicorn": "33.0.1",
     "fast-check": "2.16.0",
     "husky": "6.0.0",
     "jest": "27.0.4",
