--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser": "./dist/index.umd.js"
   },
   "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "browser": "dist/index.umd.js",
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
