feat: Add SchemaRecord and TypeOfRecord types

--- a/package.json
+++ b/package.json
@@ -92,5 +92,8 @@
     "**/*.{md,js,json}": [
       "yarn prettier --write"
     ]
+  },
+  "dependencies": {
+    "@typeofweb/utils": "0.3.0"
   }
 }
