--- a/package.json
+++ b/package.json
@@ -43,34 +43,34 @@
   ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-node-resolve": "13.1.1",
+    "@rollup/plugin-node-resolve": "13.1.3",
     "@rollup/plugin-typescript": "8.3.0",
     "@tsconfig/node12": "1.0.9",
     "@tsconfig/node14": "1.0.1",
-    "@typeofweb/eslint-plugin": "0.2.2",
-    "@types/jest": "27.0.3",
+    "@typeofweb/eslint-plugin": "0.2.3-0",
+    "@types/jest": "27.4.0",
     "@types/node": "12",
     "@types/qs": "6.9.7",
-    "@types/ramda": "0.27.60",
+    "@types/ramda": "0.27.64",
     "all-contributors-cli": "6.20.0",
-    "eslint": "8.5.0",
-    "fast-check": "2.20.0",
+    "eslint": "8.9.0",
+    "fast-check": "2.22.0",
     "husky": "7.0.4",
-    "jest": "27.4.5",
-    "lint-staged": "12.1.3",
+    "jest": "27.5.1",
+    "lint-staged": "12.3.4",
     "prettier": "2.5.1",
-    "qs": "6.10.2",
-    "ramda": "0.27.1",
+    "qs": "6.10.3",
+    "ramda": "0.28.0",
     "rimraf": "3.0.2",
-    "rollup": "2.61.1",
-    "rollup-plugin-filesize": "9.1.1",
-    "rollup-plugin-license": "2.6.0",
-    "rollup-plugin-prettier": "2.2.0",
+    "rollup": "2.67.2",
+    "rollup-plugin-filesize": "9.1.2",
+    "rollup-plugin-license": "2.6.1",
+    "rollup-plugin-prettier": "2.2.2",
     "rollup-plugin-terser": "7.0.2",
-    "ts-jest": "27.1.2",
+    "ts-jest": "27.1.3",
     "tsd": "https://github.com/typeofweb/tsd#pkg",
     "tslib": "2.3.1",
-    "typescript": "4.5.4",
+    "typescript": "4.5.5",
     "weak-napi": "2.0.2"
   },
   "scripts": {
